css/style.css
/* ... */
.photo_button_holder.black {
	background: #000;
}

.photo_button_holder input.swfupload {
	visibility: hidden;
}

.swfupload {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 2;
}

.progress_bar, .progress {
	border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border: 1px solid #999;
	background: transparent url(../img/progress_bar_bg.gif) repeat-x;
	width: 57px;
	margin: 0px auto;
	height: 8px;
	position: absolute;
	top: 35px;
	left: 8px;
	display: none;
}

.progress {
	display: block;
	border: 1px solid #4C89DD;
	background: transparent url(../img/progress_bg.gif) repeat-x;
	height: 6px;
	width: 0;
	position: absolute;
	top: 0;
	left: 0;
}

.photo_button_holder .image_holder {
	width: 76px;
	height: 59px;
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

.photo_button_holder strong {
	line-height: 55px;
	font-size: 14px;
	font-weight: normal;
	cursor: default;
	margin-left: 1px;
}

.photo_button_holder.disabled strong {
	color: #aaa;
}

.photo_button_holder.loading strong {
	font-size: 12px;
	line-height: 44px;
}

.photo_button_holder img {
	position: relative;
	top: 0;
	left: 0;
	max-width: 76px;
	max-height: 59px;
	vertical-align: middle;
	z-index: 3;
}

a.rotate_image, a.remove_image, span.image_number, a.front_image, span.main_image {
	display: block;
	position: absolute;
	color: #fff;
	font-size: 10px;
	text-shadow: #333 0px 1px 2px;
	z-index: 3;
}

a.rotate_image {
	bottom: 0;
	left: 0;
	width: 25px;
	height: 24px;
	background: transparent url(../img/rotate2.png) no-repeat;
	text-indent: -9000px;
}

a.remove_image {
	bottom: 2px;
	right: 2px;
	/*
	width: 7px;
	height: 7px;
	background: transparent url(../img/remove_image.png) no-repeat;
	*/
}

span.image_number {
	top: 0px;
	left: 2px;
}

a.front_image, span.main_image {
	top: 0px;
	right: 2px;
}

a.small_black_button {
	background: transparent url(../img/black_button_small_left.png) left top no-repeat;
    color: #fff;
    display: block;
    float: left;
    height: 28px;
    padding-left: 6px;
    text-decoration: none;
    position: relative;
	margin: 12px 0 2px 0;
}

a.small_black_button span {
    background: transparent url(../img/black_button_small_right.png) right top no-repeat;
    display: block;
    padding: 8px 24px 8px 18px;
    font-size: 12px;
	font-weight: bold;
    line-height: 12px;
}

/*
span.price_burst {
	background: transparent url(../img/ad_price3.png) no-repeat;
    display: block;
    width: 29px;
    height: 28px;
    position: absolute;
    top: 0px;
    right: 0px;
	z-index: 2;
}
*/

span.price_burst {
	background: transparent url(../img/250_purple.png) no-repeat;
    display: block;
    width: 43px;
    height: 24px;
    position: absolute;
    top: -1px;
    right: -11px;
    z-index: 2;
    color: #fff;
    font-size: 11px;
    font-weight: bold;
    line-height: 21px;
    text-indent: -9000px;
    cursor: pointer;
}

span.price_burst.press {
	top: 0;
}

input.text, textarea.text, input.password, input#q {
	width: 395px;
	padding: 3px 2px;
	margin: 6px 0px 5px 5px;
	font-size: 18px;
	line-height: 18px;
	color: #bbb;
	float: left;
	font-family: 'Lucida Grande','Lucida Sans Unicode','Lucida Sans',Arial,sans-serif;
}

input.text, textarea.text, input.password {
	border: 1px solid #7f9db9;
}

input.green {
	border: 1px solid #CBDCE7;
}

input.text.smallish {
	width: 329px;
}

input.text.small {
	width: 265px;
}

input.text.smaller {
	width: 55px;
}

input.green {
	color: #26bc3b;
}

input.password {
	font-family: 'Trebuchet MS',Arial,sans-serif;
}

textarea.text {
	height: 215px;
	max-height: 350px;	
}

input.active, textarea.active, input.edit, textarea.edit {
	color: #000;
}

input.error, textarea.error {
	border: 1px solid #cc0000;
}

input#q {
	width: 280px;
	height: 23px;
	margin: 21px 0 0 73px;
	padding: 5px 4px 4px 6px;
	background: transparent url(../img/search_bg.png) repeat-x;
	border: none;
	border-left: 1px solid #315379;
	border-right: 1px solid #315379;
	font-family: Arial, sans-serif;
	color: #879aad;
}

input#q.active {
	color: #c2cbd3;
}

#place_form {
	width: 750px;
	overflow: hidden;
	position: relative;
	margin-left: 83px;
}

#place_form #disable_overlay {
	width: 100%;
	height: 100%;
	background: transparent;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 100;
}

#place_form.edit {
	min-height: 350px;
}

#place_form .inner {
	position: relative;
	
}

.form_section {
	width: 750px;
	margin: 0px auto;
	position: relative;
	float: left;
	z-index: 4;
}

.formitem {
	position: relative;
	width: 750px;
	margin: 10px auto 10px auto;
}

.formitem.combo {
	width: 565px;
	left: 22px;
}

.formitem.slim {
	margin: 10px auto 0px auto;
}

.formitem .phototip {
	position: absolute;
	top: -17px;
	left: 156px;
	color: #090;
}

.formitem .phototip.red {
	color: #c00;
}

.formitem .phototip.black {
	color: #000;
}

/*
.formitem small {
	display: block;
	clear: left;
	float: right;
	margin-right: 179px;
	color: #777;
}
*/

#item_title_holder {
	padding-bottom: 9px;
	text-align: center;
}

#item_title_holder h2 {
	display: inline;
}

#step_5 .formitem {
	width: 588px;
}

#step_5 .formitem p {
	float: left;
}

#step_5 .formitem p.none {
	padding: 8px 10px 10px 10px;
}

.form_section a.blue_button {
	display: none;
}

#step_4.form_section a.blue_button, .form_section a.blue_button.show {
	display: block;
}

#step_5 p.important {
	margin-left: 153px;
}

#finish_ad_button {
	margin-left: 110px;
}

#edit_category {
	display: block;
	float: left;
	margin: 5px 10px;
}

#edit_title, #edit_details, #edit_price {
	font-size: 12px;
}

#edit_details {
	float: right;
	width: 120px;
	margin-right: 90px;
}

#edit_details.disabled {
	text-decoration: none;
	width: 190px;
	margin-right: 53px;
}

.mistakes {
	display: block;
	float: right;
	clear: both;
	font-size: 12px;
	margin: 3px 78px 0 0;
}

#edit_price {
	float: left;
	margin-left: 90px;
}

#edit_photos {
	display: block;
	text-align: center;
	margin-bottom: 6px;
}
/* ... */

